<resources>
    <string name="app_name">Gluten Free Recipes</string>

    <string name="recipe_of_the_day_menu">Recipe of the Day</string>
    <string name="my_recipes_menu">My Recipes</string>
    <string name="recipe_detail_menu">Recipe Details</string>
    <string name="feedback_menu">Feedback</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_clear_search_history">Clear search history</string>
    <string name="confirmation_clear_search_history">Do you really want to clear the search history?</string>
    <string name="search_hint">Search for recipes</string>

    <string name="recipe_detail_image" translateable="false">Detail image of the recipe</string>

    <string name="ingredients">Ingredients</string>
    <string name="directions">Click here for directions</string>

    <string name="feedback_user_name">Name (optional)</string>
    <string name="feedback_wants_response">Would you like an email response?</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_type">Select feedback type</string>
    <string name="feedback_body">Details...</string>
    <string name="feedback_praise">Praise</string>
    <string name="feedback_gripe">Gripe</string>
    <string name="feedback_suggestion">Suggestion</string>
    <string name="feedback_bug">Bug</string>

    <string name="action_add_to_my_recipes">Add to my recipes</string>
    <string name="action_remove_from_my_recipes">Remove from my recipes</string>
</resources>
