<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <EditText
            android:id="@+id/feedback_user_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/feedback_user_name"
            android:inputType="textPersonName"
            android:textSize="20sp"/>

    <Spinner
            android:id="@+id/feedback_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/feedback_type"
            android:entries="@array/feedback_type_list"/>

    <EditText
            android:id="@+id/feedback_body"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/feedback_body"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:maxLines="10"
            android:gravity="top|start"
            android:textSize="20sp"
            android:scrollbars="vertical"/>

    <CheckBox
            android:id="@+id/wants_response"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/feedback_wants_response"/>

    <Button
            android:id="@+id/send_feedback"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/send_feedback"/>
</LinearLayout>